# FCNC

./: .gitignore  CMakeLists.txt  Makefile  README  env.sh  main  setup.sh  tthmltree_v5.h
config/: NPlist.txt  Xsecs.txt  config.defalt  config.reduce2  fakeFactors.txt  hadhadSys.txt  tthMLtreeSys.txt  xTFWtreeSys.txt  xTFWtreeSys1.txt  xTFWtreeSys2.txt  xTFWtreeSys3.txt  xTFWtreeSys_old.txt
config/prod_Xsec/: log.generate_412098.txt  log.generate_412099  log.generate_412100  log.generate_412101  log.generate_412102  log.generate_412103  log.generate_412104  log.generate_412105
config/reduce/: config.defalt  config.xtfw_reduce
config/tensorflow/: config_lep2tau2jeven  config_lep2tau2jodd  config_lep2tau3jeven  config_lep2tau3jodd  config_lephad2jeven  config_lephad2jodd  config_lephad3jeven  config_lephad3jodd  config_lephad4jeven  config_lephad4jodd
config/trexfitter/GHH/: job_3l.config  job_ss2l.config  myFit.config  myFit_3l.config  myFit_3l.config_part1  myFit_ss2l.config_part1  samples_3l.config  samples_ss2l.config  systematics.config
config/trexfitter/GHH/config/: GHH300Y  GHH3f0f3000  GHH3f0fm3000  GHH3f350f2100  GHH3f350fm2100  GHH3f600f0  GHH3fm350f2100  GHH3fm350fm2100  GHH3fm600f0  GHH600X  GHH600Y  GHH6f0f3500  GHH6f0fm3500  GHH6f400f2400  GHH6f400fm2400  GHH6f650f0  GHH6fm400f2400  GHH6fm400fm2400  GHH6fm650f0  GHH900X  GHH9f0f5000  GHH9f0fm5000  GHH9f600f3600  GHH9f600fm3600  GHH9f800f0  GHH9fm600f3600  GHH9fm600fm3600  GHH9fm800f0
config/trexfitter/tthML/: Instrumental_sys.config  combine.config  fake_sys.config  myFit.config  myFit.config_nosys
config/trexfitter/tthML/config/config_BDT/: cH.config  uH.config
config/trexfitter/tthML/config/config_m_tt/: cH.config
config/trexfitter/tthML/config/config_ptL2/: cH.config  uH.config
config/trexfitter/tthML/config/config_x1_fit/: uH.config
config/trexfitter/tthML/config/config_x2_fit/: cH.config  uH.config
config/trexfitter/xTFW/: myFit.config
config/trexfitter/xTFW/trex_config/config_BDT/: cH.config  uH.config
config/trexfitter/xTFW/trex_config/config_m_tt/: uH.config
config/trexfitter/xTFW/trex_config/config_x1_fit/: cH.config
datafiles/: Others_mc16a.txt  data_combined_25ns_R21_data1516.txt  data_combined_25ns_R21_data17.txt  diboson_mc16a.txt  fcnc_cH_mc16d.txt  fcnc_cHtautau_mc16d.txt  fcnc_uHtautau_mc16d.txt  ttV_aMCpy8_mc16d.txt  ttW_aMCpy8_mc16d.txt  ttZ_aMCpy8_mc16a.txt  ttbargamma_madpy8_mc16a.txt  ttbarnohad_powhpy8showerwt_mc16a.txt  ttbarnohad_powhpy8showerwt_mc16d.txt  ttbarnohad_sherpa_mc16d.txt  tth_aMChpp_mc16d.txt  tth_aMCpy8_mc16d.txt  tth_powhpy8showerwt_mc16a.txt  vjets_mc16a.txt  wjets_mc16a.txt  zjets_mc16d.txt
datafiles/tthML/: diboson_mc16d.txt  fcnc_cHtautau_mc16a.txt  fcnc_prod_uH_mc16a.txt  ttV_aMCpy8_mc16a.txt  ttV_sherpa_mc16a.txt  ttW_aMCpy8_mc16a.txt  ttbargamma_madpy8_mc16d.txt  ttbarnohad_sherpa_mc16a.txt  tth_aMCpy8_mc16a.txt  tth_powhpy8showerwt_mc16d.txt  vjets_mc16d.txt
datafiles/tthML/v1/: Others_mc16d.txt  fcnc_cH_mc16a.txt  fcnc_prod_cH_mc16a.txt  fcnc_prod_cH_mc16d.txt  fcnc_prod_uH_mc16a.txt  fcnc_prod_uH_mc16d.txt  fcnc_uHtautau_mc16a.txt  ttZ_aMCpy8_mc16d.txt  tth_aMChpp_mc16a.txt  wjets_mc16d.txt  zjets_mc16a.txt
datafiles/tthML/v2/: diboson.txt  fcnc_prod_uh.txt  ignore.list  others.txt  smhiggs.txt  top.txt  ttV.txt  ttbar.txt  ttbarsys_ISR.txt  zll.txt  ztautau.txt
datafiles/tthML/v3/: fcnc_ch_ml.txt  fcnc_uh_ml.txt  ttbarsys_frag.txt
datafiles/tthML/v4/: diboson.txt  smhiggs.txt  ttbarsys_hscatter.txt  wjet.txt  zll.txt
datafiles/xTFW/: diboson.txt  fcnc_ch.txt  fcnc_uh.txt  signal.txt  smhiggs.txt  top.txt  wjet.txt  zll.txt  ztautau.txt
datafiles/xTFW/old/v1/: top.txt  ztautau.txt
datafiles/xTFW/old/v2/: ttbarsys_frag.txt
datafiles/xTFW/v1/: diboson.txt  fcnc_uh_qq.txt  smhiggs.txt
datafiles/xTFW/v2/: diboson.txt  fcnc_prod_ch.txt  othertop.txt  smhiggs.txt  ttbarsys_ISR.txt  ttbarsys_frag.txt  ttbarsys_hscatter.txt  zll.txt
datafiles/xTFW/v3/: diboson.txt  fcnc_ch_lv.txt  fcnc_ch_qq.txt  other.txt  others.txt  smhiggs.txt  ttV.txt  ztautau.txt
datafiles/xTFW/v3/bkg/: smhiggs.txt
datafiles/xTFW/v3/sig/: fcnc_uh_lv.txt
ff_ss/: FF_sideband_lnm.root  FF_sideband_nm.root  FF_ss_lnm.root  FF_ss_nm.root
include/: LinkDef.h  applyTF.h  commen.h  common.h  hadhadtree.h  nominal.h  nominal_v07.h  truthpart.h  tthmltree.h  tthmltree_v2.h  tthmltree_v3.h  tthmltree_v4.h  tthmltree_v5.h  tthmltree_v6.h  weightsys_list.h
script/: BDTResult.sh  BDTall.sh  DStable.sh  addhists.sh  checksystreediff.sh  fit.sh  fixaxis.sh  generate.sh  getAODeventNumber.sh  getCutflow.sh  getGHHLimits.sh  getLimits.sh  getMean.sh  getXsec.sh  hadhadpreparejobs.sh  mvLimitPlots.sh  optimise.py  print_importance.sh  resubsys.sh  run.sh  runlimit.sh  submit_tth_reduce.sh  trainAll.sh  trainBDT_optimise.py  trexconfig.sh  trexplot.sh  tthmlpreparejobs.sh
src/: applyTF.cc  common.C  fake_analysis.C  hadhadtree.C  hadhadtree_listfunc.C  nominal.C  nominal_listfunc.C  skim.C  tthmltree.C  tthmltree_listfunc.C  tthmltree_v2.C  tthmltree_v3.C  tthmltree_v4.C  tthmltree_v5.C  tthmltree_v6.C
tensorFlow/: GetMeanStddev.py  checkgpu.py  testJetFinder.py  trainJetFinder.py
util/: FF_SB.cc  FF_SS.cc  analyse_hist.cc  calculate_FF_SB.cc  calculate_FF_SS.cc  checkweights.cc  dict.cxx  dumptree.cc  fcnc_analysis.cc  heavyhiggs_plots.cc  make_plots.cc  plot_fake.cc  print_BDT.cc  print_BDT_optim.cc  print_GHH_limit.cc  print_cutflow.cc  print_cutflow_hadhad.cc  print_hh_ff.cc  print_importance.cc  print_limit.cc  print_xTFW_limit.cc  reduce.cc  reduce1.cc  reduce2.cc  take_variation_cover.cc  trainBDT.cc  tth_analyse_hist.cc  tth_fcnc_analysis.cc  tth_print_cutflow.cc  tth_reduce1.cc  tth_reduce2.cc  tth_trainBDT.cc  xtfw_fcnc_analysis.cc  xtfw_print_cutflow.cc  xtfw_reduce.cc  xtfw_reduce2.cc
weiming/: AnathqMini.cc  BDTcalculation.h  BDTtraining.txt  MytthAnaFakeSys.cc  MytthAnaFakeSys.h  MytthAnaFakes.cc  TMVAClassification.C  main.cc
